fixes light mode customscrollbar color

--- a/apps/next/app.css
+++ b/apps/next/app.css
@@ -843,7 +843,7 @@ textarea {
 
 *::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--color10);
   box-sizing: border-box
 }
 
